fix mobile footer overlap: remove viewport height lock, fix footer-bottom sizing

--- a/css/style.css
+++ b/css/style.css
@@ -467,6 +467,11 @@ color: rgb(6, 147, 194);
 
 @media only screen and (max-width: 670px) {
 
+    body, html {
+        height: auto;
+        min-height: 100%;
+    }
+
     header {
         position: relative;
     }
@@ -574,8 +579,10 @@ color: rgb(6, 147, 194);
     }
 
     .footer .footer-content {
+        display: flex;
         flex-direction: column;
         height: auto;
+        width: 100%;
     }
 
     .footer .footer-content .section {
@@ -585,6 +592,8 @@ color: rgb(6, 147, 194);
 
     .footer .footer-bottom {
         position: static;
+        height: auto;
+        padding: 12px 10px;
     }
 
     .share-btn {
